--- a/plugin/style.css
+++ b/plugin/style.css
@@ -72,3 +72,26 @@ body {
   cursor: pointer;
 }
 .starR.on{background-position:0 0;}
+
+#rating {
+  margin-bottom:20px;
+  width:750px;
+  height:50px;
+  text-align: center;
+}
+
+#rating_text {
+  display: inline-block;
+  text-align: center;
+  margin-right:10px;
+}
+
+#rating_text p {
+  color: #848484;
+  margin:0;
+}
+
+#star_rating{
+  display: inline-block;
+  vertical-align: 15px;
+}
